--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,18 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "graphviz>=0.20.3",
+    "ipykernel>=6.29.5",
     "kaggle>=1.6.17",
     "matplotlib>=3.9.2",
     "numpy>=2.1.3",
     "pandas>=2.2.3",
+    "plotly>=5.24.1",
+    "scikit-learn>=1.5.2",
+    "seaborn>=0.13.2",
+    "torch>=2.5.1",
+    "torchaudio>=2.5.1",
+    "torchvision>=0.20.1",
     "xgboost>=2.1.3",
 ]
 
